--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -464,3 +464,97 @@ video=
 view=Ikusi
 wed=
 wednesday=
+
+[fr]
+files=Fichiers
+absolute-path=Chemin absolu
+apr=Avr
+april=Avril
+aug=Aoû
+august=Août
+cancel=Annuler
+close=Fermer
+configuration=Configuration
+copy-to=Copier vers
+copy=Copier
+dec=Dec
+december=Décembre
+delete=Supprimer
+deleted=Supprimé
+details=Détails
+done=Terminé
+feb=Fév
+february=Février
+file-copied=Fichier copié
+file-moved=Ficher déplacé
+file-saved=Fichier sauvegardé
+filename-changed=Nom du fichier changé
+folder-created=Dossier créé
+folder-deleted=Dossier supprimé
+folder=Dossier
+fri=Ven
+friday=Vendredi
+jan=Jan
+january=Janvier
+jul=Jul
+july=Juillet
+jun=Jun
+june=Juin
+last-updated=Dernière modification
+mar=Mar
+march=Mars
+may=Mai
+may_=Mai
+mon=Lun
+monday=Lundi
+move-to=Déplacer vers
+move=Déplacé
+music=Musique
+name-changed=Nom modifié
+name-new-file=Nom du nouveau fichier
+name-new-folder=Nom du nouveau dossier
+name-to-copy=Nom du fichier à copier
+new-file=Nouveau fichier
+new-filename=Nouveau nom de fichier
+new-folder=Nouveau Dossier
+new-name=Nouveau nom
+nov=Nov
+november=Novembre
+oct=Oct
+october=Octobre
+of-free-space=d’espace libre
+open=Ouvrir
+open-as=Ouvrir en tant que...
+rename=Renommer
+replace-file=Voulez-vous remplacer le fichier existant?
+sat=Sam
+saturday=Samedi
+save=Enregistrer
+sep=Sep
+september=Septembre
+share=Partager
+size=Taille
+source-target-same=Source and target are the same La source et la cible sont identiques.
+storage-not-found=L’espace de stockage n’a pas été trouvé.
+sun=Dim
+sunday=Dimanche
+sure-delete-folder=Êtes-vous sûr de vouloir supprimer ce fichier?
+sure-delete=Êtes-vous sûr de vouloir supprimer? 
+system=Système
+text=Texte
+thu=Jeu
+thursday=Jeudi
+tue=Mar
+tuesday=Mardi
+type=Type
+unable-copy=Incapable de copier le fichier
+unable-create-file=Incapable de créer le fichier
+unable-create-folder=Incapable de créer le dossier
+unable-delete=Incapable de supprimer
+unable-rename=Incapable de modifier le nom du fichier
+unable-move=Incapable de déplacer le fichier
+unable-save=Incapable d’enregistrer
+video=Vidéo
+view=Voir
+wed=Mer
+wednesday=Mercredi
