Third (and last) Real Update

--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -93,6 +93,7 @@ wed=Wed
 wednesday=Wednesday
 
 [ca]
+files=Fitxers
 absolute-path=
 apr=
 april=
@@ -374,6 +375,7 @@ wed=
 wednesday=
 
 [eu]
+files=Fitxategiak
 absolute-path=
 apr=
 april=
