--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -561,3 +561,97 @@ video=Vidéo
 view=Voir
 wed=Mer
 wednesday=Mercredi
+
+[el]
+files=Αρχεία
+absolute-path=Απόλυτη διαδρομή
+apr=Απρ
+april=Απρίλιος
+aug=Αυγ
+august=Αύγουστος
+cancel=Ακύρωση
+close=Κλείσιμο
+configuration=Διαμόρφωση
+copy-to=Αντιγραφή σε
+copy=Αντιγραφή
+dec=Δεκ
+december=Δεκέμβριος
+delete=Διαγραφή
+deleted=Διεγράφη
+details=Λεπτομέρειες
+done=Ολοκλήρωση
+feb=Φεβ
+february=Φεβρουάριος
+file-copied=Αρχείο αντιγράφηκε
+file-moved=Αρχείο μετακινήθηκε
+file-saved=Αρχείο αποθηκεύθηκε
+filename-changed=Όνομα αρχείου τροποποιήθηκε
+folder-created=Φάκελος δημιουργήθηκε
+folder-deleted=Φάκελος διεγράφη
+folder=Φάκελος
+fri=Παρ
+friday=Παρασκευή
+jan=Ιαν
+january=Ιανουάριος
+jul=Ιολ
+july=Ιούλιος
+jun=Ιον
+june=Ιούνιος
+last-updated=Τελευταία ανανέωση
+mar=Μαρ
+march=Μάρτιος
+may=Μαι
+may_=Μάιος
+mon=Δευ
+monday=Δευτέρα
+move-to=Μετακίνηση σε
+move=Μετακίνηση
+music=Μουσική
+name-changed=Όνομα τροποποιήθηκε
+name-new-file=Όνομα νέου αρχείου
+name-new-folder=Όνομα νέου φακέλου
+name-to-copy=Όνομα αρχείου για αντιγραφή
+new-file=Νέο αρχείο
+new-filename=Νέο όνομα αρχείου
+new-folder=Νεός φάκελος
+new-name=Νέο όνομα
+nov=Νοε
+november=Νοέμβριος
+oct=Οκτ
+october=Οκτώβριος
+of-free-space=ελεύθερος χώρος
+open=Άνοιγμα
+open-as=Άνοιγμα ως...
+rename=Μετονομασία
+replace-file=Θέλετε να αντικαταστήσετε το υπάρχον αρχείο;
+sat=Σαβ
+saturday=Σάββατο
+save=Αποθήκευση
+sep=Σεπ
+september=Σεπτέμβριος
+share=Κοινοποίηση
+size=Μέγεθος
+source-target-same=Η πηγή και ο προορισμός είναι τα ίδια
+storage-not-found=Αδύνατος ο εντοπισμός αποθηκευτικού μέσου
+sun=Κυρ
+sunday=Κυριακή
+sure-delete-folder=Είσαστε σίγουρος ότι θέλετε να διαγράψετε τον φάκελο;
+sure-delete=Είσαστε σίγουρος ότι θέλετε να διαγράψετε 
+system=Σύστημα
+text=Κείμενο
+thu=Πεμ
+thursday=Πέμπτη
+tue=Τρι
+tuesday=Τρίτη
+type=Τύπος
+unable-copy=Αδύνατη η αντιγραφή αρχείου
+unable-create-file=Αδύνατη η δημιουργία αρχείου
+unable-create-folder=Αδύνατη η δημιουργία φακέλου
+unable-delete=Αδύνατη η διαγραφή
+unable-rename=Αδύνατη η μετονομασία αρχείου
+unable-move=Αδύνατη η μεταφορά αρχείου
+unable-save=Αδύνατη η αποθήκευση
+video=Βίντεο
+view=Εμφάνιση
+wed=Τετ
+wednesday=Τετάρτη
