Added Esperanto translation
Added [eo] section

--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -280,6 +280,100 @@ view=Εμφάνιση
 wed=Τετ
 wednesday=Τετάρτη
 
+[eo]
+files=Dosieroj
+absolute-path=Absoluta dosierindiko
+apr=Apr
+april=Aprilo
+aug=Aŭg
+august=Aŭgusto
+cancel=Nuligi
+close=Fermi
+configuration=Agordoj
+copy-to=Kopii al
+copy=Kopii
+dec=Dec
+december=Decembro
+delete=Forigi
+deleted=forigira
+details=Detaloj
+done=Farite
+feb=Feb
+february=Februaro
+file-copied=Dosiero kopiita
+file-moved=Dosiero movita
+file-saved=Dosiero konservita
+filename-changed=Dosiernomo ŝanĝita
+folder-created=Dosierujo kreita
+folder-deleted=Dosierujo forigita
+folder=Dosierujo
+fri=Ven
+friday=Vendredo
+jan=Jan
+january=Januaro
+jul=Jul
+july=Julio
+jun=Jun
+june=Junio
+last-updated=Laste ĝisdatigita
+mar=Mar
+march=Marto
+may=Maj
+may_=Majo
+mon=Lun
+monday=Lundo
+move-to=Movi al
+move=Movi
+music=Musiko
+name-changed=Nomo ŝanĝiĝis
+name-new-file=Nomo de nova dosiero
+name-new-folder=Nomo de nova dosierujo
+name-to-copy=Nomo de la kopienda dosiero
+new-file=Nova dosiero
+new-filename=Nova dosiernomo
+new-folder=Nova dosierujo
+new-name=Nova nomo
+nov=Nov
+november=Novembro
+oct=Okt
+october=Oktobro
+of-free-space=da libera spaco
+open=Malfermi
+open-as=Malfermi kiel...
+rename=Alinomigi
+replace-file=Ĉu vi volas anstataŭigi la ekzistantan dosieron?
+sat=Sab
+saturday=Sabato
+save=Konservi
+sep=Sep
+september=Septembro
+share=Kunhavigi
+size=Grando
+source-target-same=Fonto kaj celo samas
+storage-not-found=Memorejo ne troveblas
+sun=Dim
+sunday=Dimanĉo
+sure-delete-folder=Ĉu vi certe volas forigi ĉi tiun dosierujon?
+sure-delete=Ĉu vi certe volas forigi? 
+system=Sistemo
+text=Teksto
+thu=Ĵaŭ
+thursday=Ĵaŭdo
+tue=Mar
+tuesday=Mardo
+type=Speco
+unable-copy=La dosiero ne kopieblas
+unable-create-file=La dosiero ne kreeblas
+unable-create-folder=La dosierujo ne kreeblas
+unable-delete=Ne forigeblas
+unable-rename=La dosiernomo ne ŝanĝeblas
+unable-move=La dosiero ne moveblas
+unable-save=Ne konserveblas
+video=Video
+view=Vido
+wed=Mer
+wednesday=Merkredo
+
 [es]
 files=Archivos
 absolute-path=Ruta absoluta
