Added Italian translation
Added [it] section

--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -656,6 +656,100 @@ view=Voir
 wed=Mer
 wednesday=Mercredi
 
+[it]
+files=File
+absolute-path=Percorso assoluto
+apr=Apr
+april=Aprile
+aug=Ago
+august=Agosto
+cancel=Annulla
+close=Chiudi
+configuration=Impostazioni
+copy-to=Copia in
+copy=Copia
+dec=Dic
+december=Dicembre
+delete=Cancella
+deleted=cancellato
+details=Dettagli
+done=Fatto
+feb=Feb
+february=Febbraio
+file-copied=File copiato
+file-moved=File spostato
+file-saved=File salvato
+filename-changed=Nome del file cambiato
+folder-created=Cartella creata
+folder-deleted=Cartella cancellata
+folder=Cartella
+fri=Ven
+friday=Venerdì
+jan=Gen
+january=Gennaio
+jul=Lug
+july=Luglio
+jun=Giu
+june=Giugno
+last-updated=Ultimo aggiornamento
+mar=Mar
+march=Marzo
+may=Mag
+may_=Maggio
+mon=Lun
+monday=Lunedì
+move-to=Sposta in
+move=Sposta
+music=Musica
+name-changed=Nome cambiato
+name-new-file=Nome del nuovo file
+name-new-folder=Nome della nuova cartella
+name-to-copy=Nome del file da copiare
+new-file=Nuovo file
+new-filename=Nuovo nome del file
+new-folder=Nuova carella
+new-name=Nuovo nome
+nov=Nov
+november=Novembre
+oct=Ott
+october=Ottobre
+of-free-space=di spazio libero
+open=Apri
+open-as=Apri come...
+rename=Rinomina
+replace-file=Vuoi sostituire il file esistente?
+sat=Sab
+saturday=Sabato
+save=Salva
+sep=Set
+september=Settembre
+share=Condividi
+size=Dimensione
+source-target-same=Fonte e obiettivo coincidono
+storage-not-found=Memoria non trovata
+sun=Dom
+sunday=Domenica
+sure-delete-folder=Sei sicuro di voler cancellare la cartella?
+sure-delete=Sei sicuro di cancellare?
+system=Sistema
+text=Testo
+thu=Gio
+thursday=Giovedì
+tue=Mar
+tuesday=Martedì
+type=Tipo
+unable-copy=Impossibile copiare il file
+unable-create-file=Impossibile creare il file
+unable-create-folder=Impossibile creare la cartella
+unable-delete=Impossibile cancellare
+unable-rename=Impossibile cambiare il nome del file
+unable-move=Impossibile spostare il file
+unable-save=Impossibile salvare
+video=Video
+view=Visualizzazione
+wed=Mer
+wednesday=Mercoledì
+
 [pt]
 files=Arquivos
 absolute-path=
