Fixed translation error

--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -605,7 +605,7 @@ may_=Mai
 mon=Lun
 monday=Lundi
 move-to=Déplacer vers
-move=Déplacé
+move=Déplacer
 music=Musique
 name-changed=Nom modifié
 name-new-file=Nom du nouveau fichier
