Added Polish translation
Translation is not perfect, but it should be good base for updates

--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -843,3 +843,97 @@ video=
 view=Ver
 wed=
 wednesday=
+
+[pl]
+files=Pliki
+absolute-path=Ścieżka absolutna
+apr=kwi
+april=kwiecień
+aug=sie
+august=sierpień
+cancel=Anuluj
+close=Zamknij
+configuration=Konfiguracja
+copy-to=Kopiuj do
+copy=Kopiuj
+dec=gru
+december=grudzień
+delete=Usuń
+deleted=usunięto
+details=Szczegóły
+done=Gotowe
+feb=lut
+february=luty
+file-copied=Plik skopiowany
+file-moved=Plik przeniesiony
+file-saved=Plik zapisany
+filename-changed=Nazwa pliku zmieniona
+folder-created=Folder utworzony
+folder-deleted=Folder usunięty
+folder=Folder
+fri=pią
+friday=piątek
+jan=sty
+january=styczeń
+jul=lip
+july=lipiec
+jun=cze
+june=czerwiec
+last-updated=Ostatnio zaktualizowano
+mar=mar
+march=marzec
+may=maj
+may_=maj
+mon=pon
+monday=poniedziałek
+move-to=Przenieś do
+move=Przenieś
+music=Muzyka
+name-changed=Nazwa zmieniona
+name-new-file=Nazwa nowego pliku
+name-new-folder=Nazwa nowego folderu
+name-to-copy=Nazwa pliku do skopiowania
+new-file=Nowy plik
+new-filename=Nowa nazwa pliku
+new-folder=Nowy folder
+new-name=Nowa nazwa
+nov=lis
+november=listopad
+oct=paź
+october=październik
+of-free-space=wolnej przestrzeni
+open=Otwórz
+open-as=Otwórz jako...
+rename=Zmień nazwę
+replace-file=Czy chcesz zastąpić istniejący plik?
+sat=sob
+saturday=sobota
+save=Zapisz
+sep=wrz
+september=wrzesień
+share=Udostępnij
+size=Rozmiar
+source-target-same=Plik źródłowy i docelowy są identyczne
+storage-not-found=Nie znaleziono przestrzeni przechowywania
+sun=nie
+sunday=niedziela
+sure-delete-folder=Czy na pewno chcesz usunąć ten folder?
+sure-delete=Czy na pewno chcesz usunąć
+system=System
+text=Tekst
+thu=czw
+thursday=czwartek
+tue=wto
+tuesday=Wtorek
+type=Typ
+unable-copy=Nie można skopiować pliku
+unable-create-file=Nie można utworzyć pliku
+unable-create-folder=Unable to create the folder
+unable-delete=Unable to delete
+unable-rename=Unable to change the filename
+unable-move=Unable to move the file
+unable-save=Unable to save
+video=Video
+view=View
+wed=Wed
+wednesday=Wednesday
