--- a/locales/locales.ini
+++ b/locales/locales.ini
@@ -928,12 +928,12 @@ tuesday=Wtorek
 type=Typ
 unable-copy=Nie można skopiować pliku
 unable-create-file=Nie można utworzyć pliku
-unable-create-folder=Unable to create the folder
-unable-delete=Unable to delete
-unable-rename=Unable to change the filename
-unable-move=Unable to move the file
-unable-save=Unable to save
-video=Video
-view=View
-wed=Wed
-wednesday=Wednesday
+unable-create-folder=Nie można utworzyć folderu
+unable-delete=Nie można usunąć
+unable-rename=Nie można zmienić nazwy pliku
+unable-move=Nie można przenieść pliku
+unable-save=Nie można zapisać
+video=Wideo
+view=Widok
+wed=śro
+wednesday=środa
